# Inupdater

./: .gitignore  404.html  CHANGELOG.md  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  resource.qrc  tasks.py
.github/workflows/: ci.yml  release.yml
docs/: index.md
inupdater/: __main__.py  splash.py  ui.py  updater.py
search/: search_index.json
src/inupdater/: __main__.py  config.py  resource.py  splash.py  ui.py  updater.py
tests/: test_config.py  test_splash.py  test_ui.py  test_updater.py
tests/appexemple/: README.md  settings.json
