[tool.poetry]
name = "Inupdater"
version = "0.1.0"
description = "An update deployement tool for your software"
authors = ["YoannMos"]
license = "MIT"
readme = "README.md"

homepage = "https://yoannmos.github.io/Inupdater/"
repository = "https://github.com/yoannmos/Inupdater"

keywords = ["updater", "inupdater"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "^6.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-qt = "^4.0.2"
pytest-cov = "^3.0.0"
coverage = "^5.5"
black = "^21.7b0"
isort = "^5.9.3"
pylint = "^2.10.2"
rope = "^0.19.0"
pyinstaller = "^4.5.1"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.5"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
include = ["src/inupdater/*"]
omit = [".venv/*", "tests/*", "src/inupdater/data/*"]

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    # Disable failure for TODO items in the codebase (code will always have TODOs).
    "fixme",

    # Disable docstrings checks as we don't require excessive documentation.
    "missing-docstring",
]
